# osdp-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml  test.yml
docs/: CNAME  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/osdp/: all.html  index.html  sidebar-items.js
docs/osdp/constants/: constant.ASCII_DISPLAY_RANGE_END.html  constant.ASCII_DISPLAY_RANGE_START.html  constant.BROADCAST_ADDR.html  constant.SOM.html  index.html  sidebar-items.js
docs/osdp/hw/: index.html
docs/osdp/messages/: index.html  sidebar-items.js
docs/osdp/models/: index.html  sidebar-items.js
docs/osdp/specifics/: index.html  sidebar-items.js
docs/osdp/utils/: index.html  sidebar-items.js
docs/src/osdp/: constants.rs.html  lib.rs.html
src/: constants.rs  lib.rs
src/hw/: device.rs
src/messages/: command.rs  mod.rs  packet.rs  reply.rs
src/messages/acu/: biometric.rs  buzzer.rs  id_report.rs  keep_reader_active.rs  led.rs  mod.rs  output_control.rs  peripheral_device_capabilities.rs  poll.rs  report.rs  secure_channel_configuration.rs
src/models/: biometric.rs  mod.rs  secure_channel_configuration.rs
src/models/command/: abort.rs  acu_receive_size.rs  biometric.rs  buzzer.rs  command.rs  communication_configuration.rs  id_report.rs  keep_reader_active.rs  led.rs  mfg.rs  mod.rs  output_control.rs  peripheral_device_capabilities.rs  poll.rs  report.rs  secure_channel_configuration.rs
src/models/errors/: length.rs  mod.rs  size.rs
src/models/reply/: acknowledge.rs  (+3 more)
src/utils/: ascii.rs  checksum.rs  crc.rs  mod.rs
(+217 files in other folders)
