[package]
name = "osdp"
version = "0.1.7"
description = "Rust implementation of the Open Supervised Device Protocol (OSDP)"
license = "BSD-3-Clause"

homepage = "https://github.com/Quantumlyy/osdp-rs/blob/main/README.md"
documentation = "https://docs.rs/osdp"
repository = "https://github.com/Quantumlyy/osdp-rs/"

edition = "2021"

[dependencies]
crc16 = "^0.4.0"