[package]
name = "osdp"
version = "0.1.19"
description = "Rust implementation of the Open Supervised Device Protocol (OSDP)"
license = "BSD-3-Clause"

homepage = "https://github.com/Quantumlyy/osdp-rs/blob/main/README.md"
documentation = "https://docs.rs/osdp"
repository = "https://github.com/Quantumlyy/osdp-rs/"

edition = "2021"

[features]
hid-iclass-hadp = []
hid-iclass-osdp-v1 = []
hid-iclass-osdp-v2 = []

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
